fix discord overflow and image

--- a/styles.css
+++ b/styles.css
@@ -495,7 +495,8 @@ iframe#calendar{
     background-color: white;
     color: black;
     text-align: start;
-    padding: 1.5rem;
+    padding: 1rem;
+    overflow-x: auto;
     
 }
 
